# bsg-iron-whale

./: .gitignore  BSGDelay.filtergraph  BSGDelayMacOS.filtergraph  CMakeLists.txt  README.md
GUI/: EditorConfig.h  RotaryDial.cpp  RotaryDial.h
Source/: DelayDSP.cpp  DelayDSP.h  GainDSP.h  PluginEditor.cpp  PluginEditor.h  PluginParameters.cpp  PluginParameters.h  PluginProcessor.cpp  PluginProcessor.h
Source/DSP/: DelayDSP.cpp  DelayDSP.h  GainDSP.cpp  GainDSP.h  StereoWidthDSP.cpp  StereoWidthDSP.h
Source/GUI/: DefaultSkin.cpp  DefaultSkin.h  RotaryDial.cpp  RotaryDial.h
Source/Utils/: ParameterUtils.cpp  ParameterUtils.h
Utils/: ParameterUtils.cpp  ParameterUtils.h
